# iyarb

./: .gitignore  Makefile  NOTES.md  README.md  flake.nix  gdb_commands  install.sh  install_mbr.sh  run-cargo.sh  run.sh
.cargo/: config.toml
boot/: bootsector.asm  bootsector.ld  bss.asm  disk.asm  disk1.asm  find.asm  mbr.asm  mbr.ld  stage1.5.asm  stage1.5.ld  stage1.asm  stage1.ld
stage2/: Cargo.toml  build.rs  i686-stage2.json  link.sh  run.sh  stage2.ld
stage2/.cargo/: config.toml
stage2/asm/: bios_int.asm  mode_switch.asm
stage2/idt-generator/: Cargo.toml
stage2/idt-generator/src/: lib.rs
stage2/src/: entry.asm  entry.s  gdt.rs  lib.rs  main.rs  port.rs  qemu.rs  tables.rs  vga.rs  vga_screen.rs
stage2/src/interrupts/: idt.rs  mod.rs
