[package]
name = "stage2"
version = "0.1.0"
authors = ["iagocq <18238046+iagocq@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]
#panic = "abort"

[profile.release]
panic = "abort"
