[package]
name = "stage2rust"
version = "0.1.0"
authors = ["iagocq <18238046+iagocq@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
volatile = "0.4.4"
lazy_static = { version = "1.4.0", features = [ "spin_no_std" ] }
spin = "0.9.1"

[profile.dev]
opt-level = "s"

[profile.release]
panic = "abort"
opt-level = "s"

[lib]
crate-type = [ "staticlib" ]
